# DevProxy

./: .gitignore  README.md
desktop/: package-lock.json  package.json
desktop-native/: Cargo.toml  build.rs
desktop-native/src/: main.rs
desktop/resources/config/: config.json
desktop/src/: index.html  main.js  style.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
images/: README.txt
